<resources>
    <string name="app_name">Final_Project</string>

    <string name="add_button">Add</string>
    <string name="delete_button">Delete</string>
    <string name="update_button">Update</string>
    <string name="search_button">Search</string>

    <string name="administration">Administration</string>
    <string name="registration">Registration</string>
    <string name="student">Student</string>

    <string name="faculties">Faculties</string>
    <string name="departments">Departments</string>
    <string name="lecturer">Lecturer</string>

    <string name="student_ID">Student ID</string>
    <string name="student_name">Name</string>
    <string name="student_last_name">Last Name</string>

    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>

    <string name="registered_students">Registered Students</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>