<?xml version="1.0" encoding="utf-8"?>
<!-- res/layout/tab_administration.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StudentFragment">

    <!-- Make sure it's not clickable -->
    <EditText
        android:id="@+id/studentID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:focusable="false"
        android:clickable="false"
        android:hint="@string/student_ID" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/student_name" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/student_last_name" />

    <!-- Radio Buttons for Gender -->
    <RadioGroup
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:checked="true"
            android:layout_height="wrap_content"
            android:text="@string/radio_male" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_female" />
    </RadioGroup>

    <!-- Spinners for Administration Values -->
    <Spinner
        android:id="@+id/faculty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" />

    <Spinner
        android:id="@+id/department"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"/>

    <Spinner
        android:id="@+id/lecturer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"/>

    <!-- Buttons for Add,Delete,Update,Search -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_tab2"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:text="@string/add_button" />

        <Button
            android:id="@+id/delete_tab2"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:text="@string/delete_button" />

        <Button
            android:id="@+id/update_tab2"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:text="@string/update_button" />

        <Button
            android:id="@+id/search_tab2"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:text="@string/search_button" />
    </LinearLayout>
    <ListView
        android:id="@+id/listView_tab2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</LinearLayout>
